<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.ChooseLevelFragment">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_margin="16dp"
        android:textStyle="bold"
        android:text="@string/tv_select_level_text"
        />

    <Button
        android:id="@+id/button_level_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/button_level_text_test"
        />

    <Button
        android:id="@+id/button_level_easy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/my_green_light"
        android:text="@string/button_level_text_easy"
        />

    <Button
        android:id="@+id/button_level_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/my_orange_light"
        android:text="@string/button_level_text_normal"
        />

    <Button
        android:id="@+id/button_level_hard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/my_red_light"
        android:text="@string/button_level_text_hard"
        />





</LinearLayout>