<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".presentation.WelcomeFragment"
        >

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_margin="32dp"
            android:src="@drawable/ic_logo"
            android:contentDescription="@string/iv_content_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/tv_text_title"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo"
            />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/tv_text_game_description"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            tools:layout_editor_absoluteX="16dp" />

        <Button
            android:id="@+id/button_understand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/button_understand_text"
            app:layout_constraintBottom_toBottomOf="parent" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>